--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -16,7 +16,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube%20Music.yaml,86400
 ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
+ruleset=BilibiliHKT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml,86400
@@ -74,7 +74,7 @@ custom_proxy_group=Proxy`select`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-se
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
-custom_proxy_group=AsianTV`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
+custom_proxy_group=BilibiliHKT`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
 
 custom_proxy_group=YouTube`select`[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=Niconico`select`[]GlobalTV`[]IEPL-JP-select`[]JP-Detour-select`(JP)
