--- a/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
@@ -33,6 +33,8 @@ payload:
   - DOMAIN,dmqdd6hw24ucf.cloudfront.net
   - DOMAIN,fls-na.amazon.com
   # > Amazon
+  # 内容：AmazonIp
+  # 数量：1324条
   - IP-CIDR,100.20.0.0/14,no-resolve
   - IP-CIDR,100.24.0.0/13,no-resolve
   - IP-CIDR,103.246.148.0/22,no-resolve
@@ -95,8 +97,6 @@ payload:
   - IP-CIDR,13.249.0.0/16,no-resolve
   - IP-CIDR,13.250.0.0/15,no-resolve
   - IP-CIDR,13.32.0.0/15,no-resolve
-  - IP-CIDR,13.32.0.0/16,no-resolve
-  - IP-CIDR,13.33.0.0/16,no-resolve
   - IP-CIDR,13.34.0.128/26,no-resolve
   - IP-CIDR,13.34.1.0/26,no-resolve
   - IP-CIDR,13.34.10.128/26,no-resolve
@@ -110,14 +110,14 @@ payload:
   - IP-CIDR,13.34.15.0/26,no-resolve
   - IP-CIDR,13.34.16.128/25,no-resolve
   - IP-CIDR,13.34.16.64/26,no-resolve
-  - IP-CIDR,13.34.17.24/29,no-resolve
-  - IP-CIDR,13.34.17.64/26,no-resolve
+  - IP-CIDR,13.34.17.0/25,no-resolve
   - IP-CIDR,13.34.18.192/26,no-resolve
   - IP-CIDR,13.34.19.192/26,no-resolve
   - IP-CIDR,13.34.19.64/26,no-resolve
+  - IP-CIDR,13.34.2.0/26,no-resolve
   - IP-CIDR,13.34.2.128/26,no-resolve
   - IP-CIDR,13.34.20.0/25,no-resolve
-  - IP-CIDR,13.34.21.160/27,no-resolve
+  - IP-CIDR,13.34.21.128/26,no-resolve
   - IP-CIDR,13.34.21.192/27,no-resolve
   - IP-CIDR,13.34.21.64/26,no-resolve
   - IP-CIDR,13.34.22.128/25,no-resolve
@@ -165,13 +165,12 @@ payload:
   - IP-CIDR,13.34.69.0/24,no-resolve
   - IP-CIDR,13.34.7.0/25,no-resolve
   - IP-CIDR,13.34.70.0/23,no-resolve
-  - IP-CIDR,13.34.72.0/23,no-resolve
-  - IP-CIDR,13.34.74.0/25,no-resolve
-  - IP-CIDR,13.34.74.128/26,no-resolve
+  - IP-CIDR,13.34.72.0/22,no-resolve
+  - IP-CIDR,13.34.76.0/23,no-resolve
+  - IP-CIDR,13.34.78.0/25,no-resolve
   - IP-CIDR,13.34.8.64/26,no-resolve
   - IP-CIDR,13.34.9.0/26,no-resolve
   - IP-CIDR,13.35.0.0/16,no-resolve
-  - IP-CIDR,13.35.0.0/17,no-resolve
   - IP-CIDR,13.36.0.0/14,no-resolve
   - IP-CIDR,13.40.0.0/13,no-resolve
   - IP-CIDR,13.48.0.0/13,no-resolve
@@ -181,6 +180,8 @@ payload:
   - IP-CIDR,130.176.192.0/19,no-resolve
   - IP-CIDR,130.176.224.0/20,no-resolve
   - IP-CIDR,130.176.254.0/23,no-resolve
+  - IP-CIDR,136.18.18.0/23,no-resolve
+  - IP-CIDR,136.18.20.0/22,no-resolve
   - IP-CIDR,140.179.0.0/16,no-resolve
   - IP-CIDR,142.4.160.0/25,no-resolve
   - IP-CIDR,142.4.160.128/28,no-resolve
@@ -196,7 +197,9 @@ payload:
   - IP-CIDR,15.177.64.0/20,no-resolve
   - IP-CIDR,15.177.80.0/21,no-resolve
   - IP-CIDR,15.177.88.0/22,no-resolve
-  - IP-CIDR,15.177.92.0/24,no-resolve
+  - IP-CIDR,15.177.92.0/23,no-resolve
+  - IP-CIDR,15.177.94.0/24,no-resolve
+  - IP-CIDR,15.177.96.0/22,no-resolve
   - IP-CIDR,15.181.0.0/17,no-resolve
   - IP-CIDR,15.181.128.0/18,no-resolve
   - IP-CIDR,15.181.192.0/19,no-resolve
@@ -217,14 +220,15 @@ payload:
   - IP-CIDR,15.200.0.0/16,no-resolve
   - IP-CIDR,15.205.0.0/16,no-resolve
   - IP-CIDR,15.206.0.0/15,no-resolve
-  - IP-CIDR,15.220.0.0/19,no-resolve
+  - IP-CIDR,15.220.0.0/18,no-resolve
   - IP-CIDR,15.220.196.0/22,no-resolve
   - IP-CIDR,15.220.200.0/21,no-resolve
   - IP-CIDR,15.220.208.128/26,no-resolve
   - IP-CIDR,15.220.216.0/21,no-resolve
   - IP-CIDR,15.220.224.0/20,no-resolve
   - IP-CIDR,15.220.248.0/21,no-resolve
-  - IP-CIDR,15.220.32.0/21,no-resolve
+  - IP-CIDR,15.220.64.0/19,no-resolve
+  - IP-CIDR,15.220.96.0/20,no-resolve
   - IP-CIDR,15.221.0.0/19,no-resolve
   - IP-CIDR,15.221.128.0/22,no-resolve
   - IP-CIDR,15.221.32.0/20,no-resolve
@@ -250,7 +254,8 @@ payload:
   - IP-CIDR,15.230.14.12/32,no-resolve
   - IP-CIDR,15.230.14.17/32,no-resolve
   - IP-CIDR,15.230.14.18/31,no-resolve
-  - IP-CIDR,15.230.14.20/31,no-resolve
+  - IP-CIDR,15.230.14.20/30,no-resolve
+  - IP-CIDR,15.230.14.248/31,no-resolve
   - IP-CIDR,15.230.14.252/31,no-resolve
   - IP-CIDR,15.230.140.0/22,no-resolve
   - IP-CIDR,15.230.144.0/23,no-resolve
@@ -264,7 +269,8 @@ payload:
   - IP-CIDR,15.230.16.12/32,no-resolve
   - IP-CIDR,15.230.16.17/32,no-resolve
   - IP-CIDR,15.230.16.18/31,no-resolve
-  - IP-CIDR,15.230.16.20/31,no-resolve
+  - IP-CIDR,15.230.16.196/30,no-resolve
+  - IP-CIDR,15.230.16.20/30,no-resolve
   - IP-CIDR,15.230.16.252/31,no-resolve
   - IP-CIDR,15.230.160.0/21,no-resolve
   - IP-CIDR,15.230.170.0/23,no-resolve
@@ -277,8 +283,7 @@ payload:
   - IP-CIDR,15.230.179.0/28,no-resolve
   - IP-CIDR,15.230.179.16/29,no-resolve
   - IP-CIDR,15.230.18.0/24,no-resolve
-  - IP-CIDR,15.230.181.0/24,no-resolve
-  - IP-CIDR,15.230.182.0/23,no-resolve
+  - IP-CIDR,15.230.180.0/22,no-resolve
   - IP-CIDR,15.230.184.0/23,no-resolve
   - IP-CIDR,15.230.186.0/24,no-resolve
   - IP-CIDR,15.230.188.0/23,no-resolve
@@ -287,8 +292,7 @@ payload:
   - IP-CIDR,15.230.19.248/31,no-resolve
   - IP-CIDR,15.230.19.252/31,no-resolve
   - IP-CIDR,15.230.190.0/24,no-resolve
-  - IP-CIDR,15.230.192.0/23,no-resolve
-  - IP-CIDR,15.230.195.0/24,no-resolve
+  - IP-CIDR,15.230.192.0/22,no-resolve
   - IP-CIDR,15.230.196.0/23,no-resolve
   - IP-CIDR,15.230.198.0/24,no-resolve
   - IP-CIDR,15.230.199.0/28,no-resolve
@@ -306,12 +310,18 @@ payload:
   - IP-CIDR,15.230.218.0/23,no-resolve
   - IP-CIDR,15.230.22.0/23,no-resolve
   - IP-CIDR,15.230.220.0/23,no-resolve
+  - IP-CIDR,15.230.222.0/24,no-resolve
+  - IP-CIDR,15.230.223.0/30,no-resolve
+  - IP-CIDR,15.230.223.4/31,no-resolve
   - IP-CIDR,15.230.24.0/21,no-resolve
+  - IP-CIDR,15.230.240.0/22,no-resolve
+  - IP-CIDR,15.230.244.0/23,no-resolve
+  - IP-CIDR,15.230.246.0/24,no-resolve
   - IP-CIDR,15.230.32.0/24,no-resolve
   - IP-CIDR,15.230.35.0/24,no-resolve
   - IP-CIDR,15.230.36.0/22,no-resolve
   - IP-CIDR,15.230.4.152/29,no-resolve
-  - IP-CIDR,15.230.4.160/30,no-resolve
+  - IP-CIDR,15.230.4.160/29,no-resolve
   - IP-CIDR,15.230.4.176/28,no-resolve
   - IP-CIDR,15.230.4.19/32,no-resolve
   - IP-CIDR,15.230.40.0/22,no-resolve
@@ -433,9 +443,14 @@ payload:
   - IP-CIDR,150.222.230.96/27,no-resolve
   - IP-CIDR,150.222.231.0/24,no-resolve
   - IP-CIDR,150.222.232.112/29,no-resolve
-  - IP-CIDR,150.222.232.120/31,no-resolve
+  - IP-CIDR,150.222.232.120/30,no-resolve
+  - IP-CIDR,150.222.232.124/31,no-resolve
+  - IP-CIDR,150.222.232.126/32,no-resolve
+  - IP-CIDR,150.222.232.128/26,no-resolve
+  - IP-CIDR,150.222.232.192/27,no-resolve
   - IP-CIDR,150.222.232.51/32,no-resolve
   - IP-CIDR,150.222.232.88/32,no-resolve
+  - IP-CIDR,150.222.232.93/32,no-resolve
   - IP-CIDR,150.222.232.94/31,no-resolve
   - IP-CIDR,150.222.232.96/28,no-resolve
   - IP-CIDR,150.222.233.0/24,no-resolve
@@ -522,12 +537,8 @@ payload:
   - IP-CIDR,18.172.0.0/15,no-resolve
   - IP-CIDR,18.175.0.0/16,no-resolve
   - IP-CIDR,18.176.0.0/12,no-resolve
-  - IP-CIDR,18.184.0.0/15,no-resolve
   - IP-CIDR,18.192.0.0/11,no-resolve
-  - IP-CIDR,18.194.0.0/15,no-resolve
-  - IP-CIDR,18.208.0.0/13,no-resolve
   - IP-CIDR,18.224.0.0/12,no-resolve
-  - IP-CIDR,18.232.0.0/14,no-resolve
   - IP-CIDR,18.244.0.0/15,no-resolve
   - IP-CIDR,18.246.0.0/16,no-resolve
   - IP-CIDR,18.252.0.0/15,no-resolve
@@ -588,12 +599,14 @@ payload:
   - IP-CIDR,3.32.0.0/16,no-resolve
   - IP-CIDR,3.33.128.0/17,no-resolve
   - IP-CIDR,3.33.34.0/23,no-resolve
+  - IP-CIDR,3.33.44.0/22,no-resolve
   - IP-CIDR,3.34.0.0/15,no-resolve
   - IP-CIDR,3.36.0.0/14,no-resolve
   - IP-CIDR,3.4.0.0/22,no-resolve
   - IP-CIDR,3.4.16.0/20,no-resolve
   - IP-CIDR,3.4.4.0/24,no-resolve
   - IP-CIDR,3.4.6.0/23,no-resolve
+  - IP-CIDR,3.4.8.0/24,no-resolve
   - IP-CIDR,3.48.0.0/12,no-resolve
   - IP-CIDR,3.5.0.0/19,no-resolve
   - IP-CIDR,3.5.128.0/19,no-resolve
@@ -633,6 +646,7 @@ payload:
   - IP-CIDR,43.196.0.0/16,no-resolve
   - IP-CIDR,43.198.0.0/15,no-resolve
   - IP-CIDR,43.200.0.0/13,no-resolve
+  - IP-CIDR,43.218.0.0/16,no-resolve
   - IP-CIDR,43.224.76.0/25,no-resolve
   - IP-CIDR,43.224.76.128/26,no-resolve
   - IP-CIDR,43.224.76.192/27,no-resolve
@@ -748,7 +762,6 @@ payload:
   - IP-CIDR,52.144.233.192/26,no-resolve
   - IP-CIDR,52.144.233.64/29,no-resolve
   - IP-CIDR,52.192.0.0/12,no-resolve
-  - IP-CIDR,52.200.0.0/13,no-resolve
   - IP-CIDR,52.208.0.0/13,no-resolve
   - IP-CIDR,52.216.0.0/15,no-resolve
   - IP-CIDR,52.218.0.0/16,no-resolve
@@ -889,17 +902,14 @@ payload:
   - IP-CIDR,52.46.252.0/22,no-resolve
   - IP-CIDR,52.47.0.0/16,no-resolve
   - IP-CIDR,52.48.0.0/12,no-resolve
-  - IP-CIDR,52.58.0.0/15,no-resolve
   - IP-CIDR,52.64.0.0/12,no-resolve
-  - IP-CIDR,52.74.0.0/16,no-resolve
-  - IP-CIDR,52.77.0.0/16,no-resolve
   - IP-CIDR,52.80.0.0/15,no-resolve
   - IP-CIDR,52.82.0.0/17,no-resolve
   - IP-CIDR,52.82.128.0/19,no-resolve
   - IP-CIDR,52.82.160.0/21,no-resolve
   - IP-CIDR,52.82.168.0/24,no-resolve
   - IP-CIDR,52.82.169.0/27,no-resolve
-  - IP-CIDR,52.82.170.0/24,no-resolve
+  - IP-CIDR,52.82.170.0/23,no-resolve
   - IP-CIDR,52.82.176.0/21,no-resolve
   - IP-CIDR,52.82.184.0/23,no-resolve
   - IP-CIDR,52.82.187.0/24,no-resolve
@@ -907,7 +917,6 @@ payload:
   - IP-CIDR,52.82.192.0/18,no-resolve
   - IP-CIDR,52.83.0.0/16,no-resolve
   - IP-CIDR,52.84.0.0/14,no-resolve
-  - IP-CIDR,52.84.0.0/15,no-resolve
   - IP-CIDR,52.88.0.0/14,no-resolve
   - IP-CIDR,52.92.0.0/16,no-resolve
   - IP-CIDR,52.93.0.0/22,no-resolve
@@ -1160,7 +1169,6 @@ payload:
   - IP-CIDR,52.95.48.0/20,no-resolve
   - IP-CIDR,52.95.64.0/18,no-resolve
   - IP-CIDR,54.144.0.0/12,no-resolve
-  - IP-CIDR,54.156.0.0/14,no-resolve
   - IP-CIDR,54.160.0.0/11,no-resolve
   - IP-CIDR,54.192.0.0/12,no-resolve
   - IP-CIDR,54.208.0.0/13,no-resolve
@@ -1176,14 +1184,10 @@ payload:
   - IP-CIDR,54.222.59.0/24,no-resolve
   - IP-CIDR,54.222.64.0/21,no-resolve
   - IP-CIDR,54.222.76.0/22,no-resolve
-  - IP-CIDR,54.222.80.0/21,no-resolve
-  - IP-CIDR,54.222.88.0/23,no-resolve
-  - IP-CIDR,54.222.92.0/22,no-resolve
+  - IP-CIDR,54.222.80.0/20,no-resolve
   - IP-CIDR,54.222.96.0/22,no-resolve
   - IP-CIDR,54.223.0.0/16,no-resolve
   - IP-CIDR,54.224.0.0/13,no-resolve
-  - IP-CIDR,54.226.0.0/15,no-resolve
-  - IP-CIDR,54.230.156.0/22,no-resolve
   - IP-CIDR,54.232.0.0/14,no-resolve
   - IP-CIDR,54.236.0.0/15,no-resolve
   - IP-CIDR,54.238.0.0/16,no-resolve
@@ -1272,11 +1276,11 @@ payload:
   - IP-CIDR,54.244.0.0/14,no-resolve
   - IP-CIDR,54.248.0.0/13,no-resolve
   - IP-CIDR,54.64.0.0/11,no-resolve
-  - IP-CIDR,54.93.0.0/16,no-resolve
   - IP-CIDR,58.254.138.0/25,no-resolve
   - IP-CIDR,58.254.138.128/26,no-resolve
   - IP-CIDR,63.246.112.0/22,no-resolve
   - IP-CIDR,63.246.119.0/24,no-resolve
+  - IP-CIDR,63.246.120.0/21,no-resolve
   - IP-CIDR,63.32.0.0/14,no-resolve
   - IP-CIDR,64.187.128.0/20,no-resolve
   - IP-CIDR,64.252.128.0/18,no-resolve
@@ -1312,7 +1316,6 @@ payload:
   - IP-CIDR,71.136.64.0/18,no-resolve
   - IP-CIDR,71.137.0.0/22,no-resolve
   - IP-CIDR,71.137.4.0/24,no-resolve
-  - IP-CIDR,71.137.8.0/22,no-resolve
   - IP-CIDR,71.152.0.0/17,no-resolve
   - IP-CIDR,72.21.192.0/19,no-resolve
   - IP-CIDR,72.41.0.0/20,no-resolve
@@ -1320,6 +1323,7 @@ payload:
   - IP-CIDR,75.101.128.0/17,no-resolve
   - IP-CIDR,75.2.0.0/17,no-resolve
   - IP-CIDR,76.223.0.0/17,no-resolve
+  - IP-CIDR,76.223.168.0/24,no-resolve
   - IP-CIDR,79.125.0.0/17,no-resolve
   - IP-CIDR,87.238.80.0/21,no-resolve
   - IP-CIDR,96.127.0.0/17,no-resolve
