更新我的配置

--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -85,18 +85,19 @@ custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 
-custom_proxy_group=IEPL-JP-select`select`(SZ-JP)
-custom_proxy_group=IEPL-SG-select`select`(SZ-SG)
-custom_proxy_group=JP-Detour-select`select`(JP-Detour)
-custom_proxy_group=TW-Detour-select`select`(TW-Detour)
-custom_proxy_group=IEPL-HK-select`select`(SZ-HK)
-custom_proxy_group=HKT-Detour-select`select`(HKT-Detour)
-custom_proxy_group=IEPL-US-select`select`(SZ-US)
-custom_proxy_group=LA-Detour-select`select`(LA-Detour)
-custom_proxy_group=UK-select`select`(UK)
-custom_proxy_group=DE-Detour-select`select`(DE-Detour)
-custom_proxy_group=SG-Detour-select`select`(SG-Detour)
-custom_proxy_group=Oz-Detour-select`select`(Oz-Detour)
+custom_proxy_group=Fallback`fallback`[]select`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-JP-select`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=TW-Detour-select`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-HK-select`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HKT-Detour-select`surl-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-US-select`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=LA-Detour-select`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=UK-Detour-select`url-test`(UK-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=DE-Detour-select`url-test`(DE-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=SG-Detour-select`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Oz-Detour-select`url-test`(Oz-Detour)`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
