--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -91,7 +91,7 @@ custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/genera
 custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TW-Detour-select`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-HK-select`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=HKT-Detour-select`surl-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HKT-Detour-select`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-US-select`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=LA-Detour-select`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=UK-Detour-select`url-test`(UK-Detour)`http://www.gstatic.com/generate_204`300,,50
