--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -85,7 +85,7 @@ custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 
-custom_proxy_group=Fallback`fallback`[]select`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Fallback`fallback`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-JP-select`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
