更新我的配置

--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -85,7 +85,7 @@ custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 
-;custom_proxy_group=Fallback`fallback`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Fallback`fallback`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-JP-select`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-SG-select`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=JP-Detour-select`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
@@ -94,10 +94,10 @@ custom_proxy_group=IEPL-HK-select`url-test`(SZ-HK)`http://www.gstatic.com/genera
 custom_proxy_group=HKT-Detour-select`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=IEPL-US-select`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=LA-Detour-select`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=UK-Detour-select`url-test`(UK-Detour)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=DE-Detour-select`url-test`(DE-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=UK-Detour-select`url-test`(UK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=DE-Detour-select`url-test`(DE)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=SG-Detour-select`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Oz-Detour-select`url-test`(Oz-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Oz-Detour-select`url-test`(Oz)`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
