Proxy加入   - DOMAIN-SUFFIX,feigeblog.cn   - DOMAIN-SUFFIX,feigeblog.com

--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -36,6 +36,10 @@ payload:
   - DOMAIN,doh.dns.sb
   - DOMAIN,doh.sb
 
+  #   
+  - DOMAIN-SUFFIX,feigeblog.cn
+  - DOMAIN-SUFFIX,feigeblog.com
+
   # > Line
   - DOMAIN-SUFFIX,lin.ee
   - DOMAIN-SUFFIX,line.me
