--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -70,7 +70,7 @@ ruleset=Others,[]MATCH
 
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
+custom_proxy_group=Proxy`select`[]Fallback`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-Detour-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
