Proxy 添加vikagc.com

--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -37,6 +37,8 @@ payload:
   - DOMAIN,doh.sb
 
   #   
+  - DOMAIN-KEYWORD,feigeblog
+  - DOMAIN-KEYWORD,vikacg
   - DOMAIN-SUFFIX,feigeblog.cn
   - DOMAIN-SUFFIX,feigeblog.com
   - DOMAIN-SUFFIX,vikacg.com
