--- a/parsers/Parsers/AddMixObject.yaml
+++ b/parsers/Parsers/AddMixObject.yaml
@@ -213,7 +213,14 @@ mix-object:
       - "*.ffxiv.com"
       - "+.*"
     fallback-filter:
+    # Meta内核配置，
+      # getip: false
+      # geosite: 
+      #   - gfw
+    # D大内核配置
       geoip: true
+      geoip-code: CN
+    # 通用配置
       ipcidr:
         - 0.0.0.0/8
         - 10.0.0.0/8
