将p3terx.com加入Domestic

--- a/Rules-Complete/Provider/Domestic.yaml
+++ b/Rules-Complete/Provider/Domestic.yaml
@@ -20,6 +20,7 @@ payload:
   - DOMAIN-SUFFIX,msftncsi.com
   - DOMAIN-SUFFIX,qupu123.com
   - DOMAIN-SUFFIX,pdfwifi.com
+  - DOMAIN-SUFFIX,p3terx.com
   # China Banks
   # > Agricultural Bank of China
   - DOMAIN-SUFFIX,abchina.com
