--- a/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml
@@ -1,5 +1,6 @@
-payload:  
-  # > SoundCloud
-  # - USER-AGENT,SoundCloud*
+# > SoundCloud
+# 总条数: 3条
+payload:
+  - DOMAIN-SUFFIX,p-cdn.us
   - DOMAIN-SUFFIX,sndcdn.com
   - DOMAIN-SUFFIX,soundcloud.com
