--- a/Rules-Complete/Provider/Microsoft.yaml
+++ b/Rules-Complete/Provider/Microsoft.yaml
@@ -1,12 +1,6 @@
+# > Microsoft
+# 总条数: 544条
 payload:
-  # > Microsoft
-  # - DOMAIN-SUFFIX,aria.microsoft.com
-  # - USER-AGENT,Microsoft%20Remote%20Desktop*
-  - PROCESS-NAME,OneDrive
-  - PROCESS-NAME,OneDrive*
-  - PROCESS-NAME,OneDriveiOSApp*
-  - PROCESS-NAME,OneDriveUpdater
-
   - DOMAIN-KEYWORD,1drv
   - DOMAIN-KEYWORD,microsoft
   - DOMAIN-KEYWORD,onedrive
@@ -29,9 +23,7 @@ payload:
   - DOMAIN-SUFFIX,apisof.net
   - DOMAIN-SUFFIX,appcenter.ms
   - DOMAIN-SUFFIX,applicationinsights.io
-  - DOMAIN-SUFFIX,Applicationinsights.io
   - DOMAIN-SUFFIX,applicationinsights.net
-  - DOMAIN-SUFFIX,Applicationinsights.net
   - DOMAIN-SUFFIX,aria.ms
   - DOMAIN-SUFFIX,asp.net
   - DOMAIN-SUFFIX,aspnetcdn.com
@@ -47,7 +39,6 @@ payload:
   - DOMAIN-SUFFIX,azure-test.net
   - DOMAIN-SUFFIX,azure.cn
   - DOMAIN-SUFFIX,azure.com
-  - DOMAIN-SUFFIX,azure.microsoft.com
   - DOMAIN-SUFFIX,azure.net
   - DOMAIN-SUFFIX,azurecomcdn.net
   - DOMAIN-SUFFIX,azurecontainer.io
@@ -63,12 +54,12 @@ payload:
   - DOMAIN-SUFFIX,azuredns-prd.info
   - DOMAIN-SUFFIX,azuredns-prd.org
   - DOMAIN-SUFFIX,azureedge-test.net
+  - DOMAIN-SUFFIX,azureedge.net
   - DOMAIN-SUFFIX,azurefd.net
   - DOMAIN-SUFFIX,azurefd.us
   - DOMAIN-SUFFIX,azureiotcentral.com
   - DOMAIN-SUFFIX,azureiotsolutions.com
   - DOMAIN-SUFFIX,azureiotsuite.com
-  - DOMAIN-SUFFIX,azuremarketplace.microsoft.com
   - DOMAIN-SUFFIX,azureplanetscale.info
   - DOMAIN-SUFFIX,azureplanetscale.net
   - DOMAIN-SUFFIX,azurerms.com
@@ -109,7 +100,6 @@ payload:
   - DOMAIN-SUFFIX,biying.cn
   - DOMAIN-SUFFIX,biying.com
   - DOMAIN-SUFFIX,biying.com.cn
-  - DOMAIN-SUFFIX,bj1.api.bing.com
   - DOMAIN-SUFFIX,blazor.net
   - DOMAIN-SUFFIX,bluehatil.com
   - DOMAIN-SUFFIX,bluehatnights.com
@@ -126,8 +116,6 @@ payload:
   - DOMAIN-SUFFIX,chinacloudsites.cn
   - DOMAIN-SUFFIX,cloudapp.net
   - DOMAIN-SUFFIX,cloudappsecurity.com
-  - DOMAIN-SUFFIX,cn.bing.com
-  - DOMAIN-SUFFIX,cn.bing.net
   - DOMAIN-SUFFIX,codethemicrobit.com
   - DOMAIN-SUFFIX,cortana.ai
   - DOMAIN-SUFFIX,cortanaanalytics.com
@@ -139,21 +127,17 @@ payload:
   - DOMAIN-SUFFIX,crossborderexpansion.com
   - DOMAIN-SUFFIX,cs11.wpc.v0cdn.net
   - DOMAIN-SUFFIX,cs9.wac.phicdn.net
-  - DOMAIN-SUFFIX,developer.microsoft.com
   - DOMAIN-SUFFIX,devopsassessment.net
   - DOMAIN-SUFFIX,devopsms.com
   - DOMAIN-SUFFIX,dictate.ms
   - DOMAIN-SUFFIX,discoverbing.com
-  - DOMAIN-SUFFIX,ditu.live.com
   - DOMAIN-SUFFIX,docs.com
   - DOMAIN-SUFFIX,dot.net
-  - DOMAIN-SUFFIX,dtlgalleryint.cloudapp.net
   - DOMAIN-SUFFIX,dwh5.com
   - DOMAIN-SUFFIX,dynamics.com
   - DOMAIN-SUFFIX,e-msedge.net
   - DOMAIN-SUFFIX,edgesuite.net
   - DOMAIN-SUFFIX,efproject.net
-  - DOMAIN-SUFFIX,emoi-cncdn.bing.com
   - DOMAIN-SUFFIX,engkoo.com
   - DOMAIN-SUFFIX,evoke-windowsservices-tas.msedge
   - DOMAIN-SUFFIX,exp-tas.com
@@ -161,7 +145,6 @@ payload:
   - DOMAIN-SUFFIX,fabric.io
   - DOMAIN-SUFFIX,fasttrackreadysupport.com
   - DOMAIN-SUFFIX,femalefounderscomp.com
-  - DOMAIN-SUFFIX,files.1drv.com
   - DOMAIN-SUFFIX,flipwithsurface.com
   - DOMAIN-SUFFIX,fluidpreview.com
   - DOMAIN-SUFFIX,footprintdns.com
@@ -177,6 +160,7 @@ payload:
   - DOMAIN-SUFFIX,gotcosmos.com
   - DOMAIN-SUFFIX,graphengine.io
   - DOMAIN-SUFFIX,groupme.com
+  - DOMAIN-SUFFIX,helpshift.com
   - DOMAIN-SUFFIX,here.com
   - DOMAIN-SUFFIX,here.net
   - DOMAIN-SUFFIX,heremaps.cn
@@ -194,7 +178,6 @@ payload:
   - DOMAIN-SUFFIX,ie8.co
   - DOMAIN-SUFFIX,ie9.com
   - DOMAIN-SUFFIX,imaginecup.pl
-  - DOMAIN-SUFFIX,img-prod-cms-rt-microsoft-com
   - DOMAIN-SUFFIX,img-prod-cms-rt-microsoft-com.akamaized.net
   - DOMAIN-SUFFIX,img-s-msn-com.akamaized.net
   - DOMAIN-SUFFIX,ingads.com
@@ -212,11 +195,11 @@ payload:
   - DOMAIN-SUFFIX,latampartneruniversity.com
   - DOMAIN-SUFFIX,live.cn
   - DOMAIN-SUFFIX,live.com
-  - DOMAIN-SUFFIX,live.com.akadns.net
   - DOMAIN-SUFFIX,live.com.au
   - DOMAIN-SUFFIX,live.eu
   - DOMAIN-SUFFIX,live.net
   - DOMAIN-SUFFIX,livefilestore.com
+  - DOMAIN-SUFFIX,livetileedge.dsx.mp.microsoft.com.edgekey.net
   - DOMAIN-SUFFIX,livingyourambition.com
   - DOMAIN-SUFFIX,localytics.com
   - DOMAIN-SUFFIX,lync.com
@@ -249,7 +232,6 @@ payload:
   - DOMAIN-SUFFIX,microsoft.ch
   - DOMAIN-SUFFIX,microsoft.cl
   - DOMAIN-SUFFIX,microsoft.com
-  - DOMAIN-SUFFIX,microsoft.com.akadns.net
   - DOMAIN-SUFFIX,microsoft.com.nsatc.net
   - DOMAIN-SUFFIX,microsoft.cz
   - DOMAIN-SUFFIX,microsoft.de
@@ -288,7 +270,6 @@ payload:
   - DOMAIN-SUFFIX,microsoftadvertising.com
   - DOMAIN-SUFFIX,microsoftadvertisingregionalawards.com
   - DOMAIN-SUFFIX,microsoftaffiliates.com
-  - DOMAIN-SUFFIX,microsoftapps.azurewebsites.net
   - DOMAIN-SUFFIX,microsoftazuread-sso.com
   - DOMAIN-SUFFIX,microsoftcloud.com
   - DOMAIN-SUFFIX,microsoftcloudsummit.com
@@ -365,6 +346,7 @@ payload:
   - DOMAIN-SUFFIX,mschallenge2018.com
   - DOMAIN-SUFFIX,msdn.com
   - DOMAIN-SUFFIX,msecnd.net
+  - DOMAIN-SUFFIX,msedge.net
   - DOMAIN-SUFFIX,msft.info
   - DOMAIN-SUFFIX,msft.net
   - DOMAIN-SUFFIX,msftauth.cn
@@ -419,7 +401,6 @@ payload:
   - DOMAIN-SUFFIX,o365weve-ppe.com
   - DOMAIN-SUFFIX,o365weve.com
   - DOMAIN-SUFFIX,oaspapps.com
-  - DOMAIN-SUFFIX,oaspapps.com.akadns.net
   - DOMAIN-SUFFIX,office
   - DOMAIN-SUFFIX,office.com
   - DOMAIN-SUFFIX,office.net
@@ -431,14 +412,11 @@ payload:
   - DOMAIN-SUFFIX,officeplus.cn
   - DOMAIN-SUFFIX,officeppe.net
   - DOMAIN-SUFFIX,omniroot.com
-  - DOMAIN-SUFFIX,oneclient.sfx.ms
   - DOMAIN-SUFFIX,onecollector.cloudapp.aria
-  - DOMAIN-SUFFIX,onecollector.cloudapp.aria.akadns.net
   - DOMAIN-SUFFIX,onedrive.co
   - DOMAIN-SUFFIX,onedrive.co.uk
   - DOMAIN-SUFFIX,onedrive.com
   - DOMAIN-SUFFIX,onedrive.eu
-  - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,onedrive.net
   - DOMAIN-SUFFIX,onedrive.org
   - DOMAIN-SUFFIX,onenote.com
@@ -455,14 +433,11 @@ payload:
   - DOMAIN-SUFFIX,outlookgroups.ms
   - DOMAIN-SUFFIX,outlookmobile.com
   - DOMAIN-SUFFIX,ovi.com.cn
-  - DOMAIN-SUFFIX,p.sfx.ms
   - DOMAIN-SUFFIX,passport.net
   - DOMAIN-SUFFIX,phonefactor.net
-  - DOMAIN-SUFFIX,photos.live.com
   - DOMAIN-SUFFIX,pixapp.net
   - DOMAIN-SUFFIX,playfabapi.cn
   - DOMAIN-SUFFIX,playfabcn.com
-  - DOMAIN-SUFFIX,poshtestgallery.cloudapp.net
   - DOMAIN-SUFFIX,poshtestgallery.com
   - DOMAIN-SUFFIX,powerappscdn.net
   - DOMAIN-SUFFIX,powerautomate.com
@@ -471,8 +446,6 @@ payload:
   - DOMAIN-SUFFIX,prod-video-cms-rt-microsoft-com.akamaized.net
   - DOMAIN-SUFFIX,projectmurphy.net
   - DOMAIN-SUFFIX,projectsangam.com
-  - DOMAIN-SUFFIX,psg-int-centralus.cloudapp.net
-  - DOMAIN-SUFFIX,psg-int-eastus.cloudapp.net
   - DOMAIN-SUFFIX,public-trust.com
   - DOMAIN-SUFFIX,pwabuilder.com
   - DOMAIN-SUFFIX,pxt.io
@@ -493,7 +466,6 @@ payload:
   - DOMAIN-SUFFIX,sharepoint.com
   - DOMAIN-SUFFIX,sharepointonline.com
   - DOMAIN-SUFFIX,signalr.net
-  - DOMAIN-SUFFIX,skydrive.wns.windows.com
   - DOMAIN-SUFFIX,skype
   - DOMAIN-SUFFIX,skype.com
   - DOMAIN-SUFFIX,skype.net
@@ -508,8 +480,6 @@ payload:
   - DOMAIN-SUFFIX,statics-marketingsites-eus-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-neu-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-wcus-ms-com.akamaized.net
-  - DOMAIN-SUFFIX,storage.live.com
-  - DOMAIN-SUFFIX,storage.msn.com
   - DOMAIN-SUFFIX,successwithteams.com
   - DOMAIN-SUFFIX,surface.com
   - DOMAIN-SUFFIX,svc.ms
@@ -519,6 +489,9 @@ payload:
   - DOMAIN-SUFFIX,syncshop.cn
   - DOMAIN-SUFFIX,sysinternals.com
   - DOMAIN-SUFFIX,tailwindtraders.com
+  - DOMAIN-SUFFIX,teams.cdn.live.net
+  - DOMAIN-SUFFIX,teams.live.com
+  - DOMAIN-SUFFIX,teams.microsoft.com
   - DOMAIN-SUFFIX,techhub.ms
   - DOMAIN-SUFFIX,tenor.com
   - DOMAIN-SUFFIX,tfsallin.net
@@ -536,24 +509,14 @@ payload:
   - DOMAIN-SUFFIX,videoindexer.ai
   - DOMAIN-SUFFIX,vip5.afdorigin-prod-am02.afdogw.com
   - DOMAIN-SUFFIX,virtualearth.net
-  - DOMAIN-SUFFIX,visualstudio-staging.com
-  - DOMAIN-SUFFIX,visualstudio.co
-  - DOMAIN-SUFFIX,visualstudio.co.uk
-  - DOMAIN-SUFFIX,visualstudio.com
-  - DOMAIN-SUFFIX,visualstudio.eu
-  - DOMAIN-SUFFIX,visualstudio.net
   - DOMAIN-SUFFIX,vsallin.net
   - DOMAIN-SUFFIX,vsassets.io
-  - DOMAIN-SUFFIX,vscode-unpkg.net
-  - DOMAIN-SUFFIX,vscode-webview.net
-  - DOMAIN-SUFFIX,vscode.dev
   - DOMAIN-SUFFIX,wbd.ms
   - DOMAIN-SUFFIX,what-fan.net
   - DOMAIN-SUFFIX,windows
   - DOMAIN-SUFFIX,windows-int.net
   - DOMAIN-SUFFIX,windows-ppe.net
   - DOMAIN-SUFFIX,windows.com
-  - DOMAIN-SUFFIX,windows.com.akadns.net
   - DOMAIN-SUFFIX,windows.net
   - DOMAIN-SUFFIX,windows.nl
   - DOMAIN-SUFFIX,windows8.hk
@@ -575,3 +538,10 @@ payload:
   - DOMAIN-SUFFIX,xamarin.com
   - DOMAIN-SUFFIX,yammer.com
   - DOMAIN-SUFFIX,yammerusercontent.com
+  - DOMAIN,edge.activity.windows.com
+  - DOMAIN,edge.microsoft.com
+  - DOMAIN,iecvlist.microsoft.com
+  - DOMAIN,msedge.api.cdp.microsoft.com
+  - DOMAIN,teams.events.data.microsoft.com
+  - PROCESS-NAME,onedrive
+  - PROCESS-NAME,onedriveupdater
