--- a/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml
@@ -1,54 +1,79 @@
-payload:  
-  # > iQiyi
-  # - USER-AGENT,*QIYI*
-  # - USER-AGENT,iQiYi*
-  # - USER-AGENT,iQIYI*
-  # - USER-AGENT,QIYIVideo*
-  # - USER-AGENT,QYPlayer*
-  # - USER-AGENT,QTP*
-  - PROCESS-NAME,com.iqiyi.i18n
-  - PROCESS-NAME,com.iqiyi.i18n.tv
-  - PROCESS-NAME,com.qiyi.video
+# > 爱奇艺
+# 总条数: 76条
+payload:
   - DOMAIN-KEYWORD,qiyi
   - DOMAIN-SUFFIX,71.am
+  - DOMAIN-SUFFIX,71.am.com
   - DOMAIN-SUFFIX,71edge.com
+  - DOMAIN-SUFFIX,71edge.net
+  - DOMAIN-SUFFIX,aianno.cn
+  - DOMAIN-SUFFIX,aianno.com
+  - DOMAIN-SUFFIX,aiqiyicloud-mgmt.com
+  - DOMAIN-SUFFIX,aiqiyicloud.com
+  - DOMAIN-SUFFIX,aiqiyicloud.net
+  - DOMAIN-SUFFIX,baiying.com
+  - DOMAIN-SUFFIX,gitv.cn
   - DOMAIN-SUFFIX,gitv.tv
+  - DOMAIN-SUFFIX,ibkstore.com
   - DOMAIN-SUFFIX,inter.iqiyi.com
-  - DOMAIN-SUFFIX,inter.ptqy.gitv.tv
+  - DOMAIN-SUFFIX,intl-rcd.iqiyi.com
+  - DOMAIN-SUFFIX,intl-subscription.iqiyi.com
   - DOMAIN-SUFFIX,intl.iqiyi.com
   - DOMAIN-SUFFIX,iq.com
   - DOMAIN-SUFFIX,iqiyi.com
+  - DOMAIN-SUFFIX,iqiyi.demo.uwp
+  - DOMAIN-SUFFIX,iqiyiedge.com
+  - DOMAIN-SUFFIX,iqiyiedge.net
   - DOMAIN-SUFFIX,iqiyipic.com
+  - DOMAIN-SUFFIX,jiangbing.cn
+  - DOMAIN-SUFFIX,pps.tv
   - DOMAIN-SUFFIX,ppsimg.com
+  - DOMAIN-SUFFIX,ppstream.cn
+  - DOMAIN-SUFFIX,ppstream.com
+  - DOMAIN-SUFFIX,ppstream.com.cn
+  - DOMAIN-SUFFIX,ppstream.net
+  - DOMAIN-SUFFIX,ppstream.net.cn
+  - DOMAIN-SUFFIX,ppsurl.com
+  - DOMAIN-SUFFIX,qiyi.cn
   - DOMAIN-SUFFIX,qiyi.com
   - DOMAIN-SUFFIX,qiyipic.com
+  - DOMAIN-SUFFIX,qy.com
   - DOMAIN-SUFFIX,qy.net
+  - DOMAIN-SUFFIX,suike.cn
   - DOMAIN,cache.video.iqiyi.com
-  - DOMAIN,intel-cache.m.iqiyi.com
-  - DOMAIN,intel-cache.video.iqiyi.com
-  - DOMAIN,intl-rcd.iqiyi.com
-  - DOMAIN,intl-subscription.iqiyi.com
-  - IP-CIDR,103.5.34.153/32,no-resolve
-  - IP-CIDR,104.109.129.153/32,no-resolve
-  - IP-CIDR,104.85.165.17/32,no-resolve
-  - IP-CIDR,110.238.107.47/32,no-resolve
-  - IP-CIDR,118.26.32.162/32,no-resolve
-  - IP-CIDR,118.26.32.178/32,no-resolve
-  - IP-CIDR,159.138.102.146/32,no-resolve
-  - IP-CIDR,184.51.102.0/24,no-resolve
-  - IP-CIDR,203.211.4.169/32,no-resolve
-  - IP-CIDR,203.211.4.193/32,no-resolve
-  - IP-CIDR,203.74.95.130/28,no-resolve
-  - IP-CIDR,203.74.95.131/32,no-resolve
-  - IP-CIDR,203.74.95.139/32,no-resolve
-  - IP-CIDR,203.80.97.203/32,no-resolve
-  - IP-CIDR,210.201.32.11/32,no-resolve
-  - IP-CIDR,210.201.32.8/32,no-resolve
-  - IP-CIDR,210.71.227.202/32,no-resolve
-  - IP-CIDR,23.200.145.146/32,no-resolve
-  - IP-CIDR,23.210.215.186/32,no-resolve
-  - IP-CIDR,23.211.15.0/24,no-resolve
-  - IP-CIDR,23.211.15.99/32,no-resolve
-  - IP-CIDR,23.219.172.0/24,no-resolve
-  - IP-CIDR,23.40.242.10/32,no-resolve
-  - IP-CIDR,23.59.252.0/24,no-resolve
+  - IP-CIDR,101.224.0.0/13
+  - IP-CIDR,103.44.56.0/22
+  - IP-CIDR,103.5.34.153/32
+  - IP-CIDR,104.109.129.153/32
+  - IP-CIDR,104.85.165.17/32
+  - IP-CIDR,110.238.107.47/32
+  - IP-CIDR,118.26.120.0/24
+  - IP-CIDR,118.26.32.0/23
+  - IP-CIDR,118.26.32.162/32
+  - IP-CIDR,119.176.0.0/12
+  - IP-CIDR,159.138.102.146/32
+  - IP-CIDR,184.51.102.0/24
+  - IP-CIDR,203.211.4.169/32
+  - IP-CIDR,203.211.4.193/32
+  - IP-CIDR,203.74.95.130/28
+  - IP-CIDR,203.74.95.131/32
+  - IP-CIDR,203.74.95.139/32
+  - IP-CIDR,203.74.95.153/32
+  - IP-CIDR,203.80.97.203/32
+  - IP-CIDR,210.201.32.11/32
+  - IP-CIDR,210.201.32.8/32
+  - IP-CIDR,210.71.227.200/32
+  - IP-CIDR,210.71.227.202/32
+  - IP-CIDR,223.119.62.224/28
+  - IP-CIDR,23.200.145.146/32
+  - IP-CIDR,23.210.215.186/32
+  - IP-CIDR,23.211.15.0/24
+  - IP-CIDR,23.211.15.99/32
+  - IP-CIDR,23.219.172.0/24
+  - IP-CIDR,23.40.241.251/32
+  - IP-CIDR,23.40.242.10/32
+  - IP-CIDR,23.53.32.88/32
+  - IP-CIDR,23.59.252.0/24
+  - PROCESS-NAME,com.iqiyi.i18n
+  - PROCESS-NAME,com.iqiyi.i18n.tv
+  - PROCESS-NAME,com.qiyi.video
