--- a/Rules-Complete/Provider/Media/GlobalTV/Apple TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Apple TV.yaml
@@ -1,5 +1,11 @@
-payload:  
-  # > Apple TV
+# > AppleTV
+# 总条数: 8条
+payload:
   - DOMAIN-SUFFIX,tv.apple.com
+  - DOMAIN,hls-amt.itunes.apple.com
+  - DOMAIN,hls.itunes.apple.com
   - DOMAIN,np-edge.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
+  - DOMAIN,tv.applemusic.com
+  - DOMAIN,uts-api.itunes.apple.com
+  - PROCESS-NAME,tv
