--- a/Rules-Complete/Provider/Media/GlobalTV/Fox Now.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Fox Now.yaml
@@ -1,6 +1,7 @@
-payload:  
-  # > Fox Now
-  # - USER-AGENT,FOX%20NOW*
+# > FoxNow
+# 总条数: 4条
+payload:
   - DOMAIN-SUFFIX,fox.com
   - DOMAIN-SUFFIX,foxdcg.com
+  - DOMAIN-SUFFIX,theplatform.com
   - DOMAIN-SUFFIX,uplynk.com
