--- a/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml
@@ -1,6 +1,6 @@
-payload:  
-  # > JOOX
-  - PROCESS-NAME,com.tencent.ibg.joox
-  - PROCESS-NAME,com.tencent.ibg.jooxtv
-  - DOMAIN-SUFFIX,joox.com
+# > JOOX
+# 总条数: 3条
+payload:
   - DOMAIN-KEYWORD,jooxweb-api
+  - DOMAIN-SUFFIX,joox.com
+  - PROCESS-NAME,com.tencent.ibg.joox
