--- a/Rules-Complete/Provider/Media/GlobalTV/Line TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Line TV.yaml
@@ -1,6 +1,12 @@
-payload:  
-  # > Line TV
-  # - USER-AGENT,LINE*
+# > LineTV
+# 总条数: 9条
+payload:
+  - DOMAIN-SUFFIX,chocotv.com.tw
   - DOMAIN-SUFFIX,d3c7rimkq79yfu.cloudfront.net
+  - DOMAIN-SUFFIX,line-cdn.net
+  - DOMAIN-SUFFIX,line-scdn.net
   - DOMAIN-SUFFIX,linetv.tw
-  - DOMAIN-SUFFIX,profile.line-scdn.net
+  - DOMAIN,d17lx9ucc6k9fc.cloudfront.net
+  - DOMAIN,d3pgb93pk7bvxj.cloudfront.net
+  - DOMAIN,d3vm9lcxb6xcm4.cloudfront.net
+  - PROCESS-NAME,com.linecorp.linetv
