--- a/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml
@@ -1,4 +1,7 @@
-payload:  
-  # > Pandora
-  - PROCESS-NAME,com.pandora.android
+# > Pandora
+# 总条数: 4条
+payload:
+  - DOMAIN-SUFFIX,kmplayer.com
+  - DOMAIN-SUFFIX,p-cdn.us
   - DOMAIN-SUFFIX,pandora.com
+  - DOMAIN-SUFFIX,pandora.tv
