--- a/Rules-Complete/Provider/Media/GlobalTV/YouTube Music.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/YouTube Music.yaml
@@ -1,4 +1,4 @@
-payload:  
-  # > Youtube Music
-  - PROCESS-NAME,com.google.android.apps.youtube.music
-  - PROCESS-NAME,com.google.android.youtube.tvmusic
+# > YouTubeMusic
+# 总条数: 1条
+payload:
+  - DOMAIN,music.youtube.com
