--- a/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
+++ b/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
@@ -1,11 +1,10 @@
+# > Bahamut
+# 总条数: 8条
 payload:
-  # > Bahamut
-  # - USER-AGENT,Anime*
-  - PROCESS-NAME,tw.com.gamer.android.animad
-  
   - DOMAIN-SUFFIX,bahamut.com.tw
+  - DOMAIN-SUFFIX,digicert.com
+  - DOMAIN-SUFFIX,fbcdn.net
   - DOMAIN-SUFFIX,gamer.com.tw
   - DOMAIN-SUFFIX,hinet.net
+  - DOMAIN-SUFFIX,viblast.com
   - DOMAIN,bahamut.akamaized.net
-  - DOMAIN,gamer-cds.cdn.hinet.net
-  - DOMAIN,gamer2-cds.cdn.hinet.net
