--- a/Rules-Complete/Provider/Special.yaml
+++ b/Rules-Complete/Provider/Special.yaml
@@ -1,42 +1,14 @@
+# > Download
+# 总条数: 好多条
 payload:
-  # > AliCloud
-  - DOMAIN-SUFFIX,alicloudccp.com
-  - DOMAIN-SUFFIX,aliyun.com
-  - DOMAIN-SUFFIX,aliyuncdn.com
-  - DOMAIN-SUFFIX,aliyuncs.com
-  - DOMAIN-SUFFIX,aliyundrive.com
-
-  # > Tencent Software
-  - PROCESS-NAME,TIM.exe
-  - PROCESS-NAME,TIM
-  - PROCESS-NAME,com.tencent.mobileqq
-
-  # > Dler Cloud
+  # Dler Cloud
   - DOMAIN-SUFFIX,dler.cloud
 
-  # > Apple CDN
-  - PROCESS-NAME,storedownloadd
-  # - USER-AGENT,com.apple.appstored*
-  - DOMAIN,aod.itunes.apple.com
-  - DOMAIN,api.smoot.apple.cn
-  - DOMAIN,appldnld.apple.com
-  - DOMAIN,apptrailers.itunes.apple.com
-  - DOMAIN,gs-loc-cn.apple.com
-  - DOMAIN,iosapps.itunes.apple.com
-  - DOMAIN,music.apple.com
-  - DOMAIN,mvod.itunes.apple.com
-  - DOMAIN,osxapps.itunes.apple.com
-  - DOMAIN,supportdownload.apple.com
-  - DOMAIN,swcdn.apple.com
-  - DOMAIN,updates-http.cdn-apple.com
-  - DOMAIN-SUFFIX,ls.apple.com
-  - DOMAIN-SUFFIX,mzstatic.com
-
-  # > Proxy plugin
+  # Proxy plugin
   - PROCESS-NAME,v2ray
   - PROCESS-NAME,ss-local
 
-  # > Tesla
+  # Tesla
   - DOMAIN,tesla-cdn.thron.cn
   - DOMAIN,tesla-cdn.thron.com
   - DOMAIN-SUFFIX,solarcity.com
@@ -48,84 +20,310 @@ payload:
   - DOMAIN-SUFFIX,teslamotors.com.cn
   - DOMAIN-SUFFIX,ts.la
 
-  # > UUBooster
+  # UU加速器
   - PROCESS-NAME,UUBooster
 
-  # > Xunlei
-  # - USER-AGENT,%E8%BF%85%E9%9B%B7
+  # 下载
+  - DOMAIN-KEYWORD,aria2
+  - DOMAIN-KEYWORD,thunder
+  - DOMAIN-KEYWORD,xlliveud
+  - DOMAIN-KEYWORD,xunlei
+  - DOMAIN-KEYWORD,yunpan
   - DOMAIN-SUFFIX,00cdn.com
+  - DOMAIN-SUFFIX,155.com
+  - DOMAIN-SUFFIX,2sonar.com
   - DOMAIN-SUFFIX,88cdn.com
-  - DOMAIN-SUFFIX,kanimg.com
-  - DOMAIN-SUFFIX,kankan.com
-  - DOMAIN-SUFFIX,p2cdn.com
-  - DOMAIN-SUFFIX,sandai.net
-  - DOMAIN-SUFFIX,thundercdn.com
-  - DOMAIN-SUFFIX,xunlei.com
-
-  # > Download
-  - PROCESS-NAME,aria2c.exe
-  - PROCESS-NAME,BitComet.exe
-  - PROCESS-NAME,fdm.exe
-  # - PROCESS-NAME,IDMan.exe
-  - PROCESS-NAME,NetTransport.exe
-  - PROCESS-NAME,qbittorrent.exe
-  - PROCESS-NAME,Thunder.exe
-  - PROCESS-NAME,transmission-daemon.exe
-  - PROCESS-NAME,transmission-qt.exe
-  - PROCESS-NAME,uTorrent.exe
-  - PROCESS-NAME,WebTorrent.exe
-  - PROCESS-NAME,aria2c
-  - PROCESS-NAME,fdm
-  - PROCESS-NAME,Folx
-  - PROCESS-NAME,NetTransport
-  - PROCESS-NAME,qbittorrent
-  - PROCESS-NAME,Thunder
-  - PROCESS-NAME,Transmission
-  - PROCESS-NAME,uTorrent
-  - PROCESS-NAME,WebTorrent
-  - PROCESS-NAME,WebTorrent Helper
+  - DOMAIN-SUFFIX,8uri.cn
   - DOMAIN-SUFFIX,awesome-hd.me
   - DOMAIN-SUFFIX,broadcasthe.net
   - DOMAIN-SUFFIX,chdbits.co
   - DOMAIN-SUFFIX,classix-unlimited.co.uk
   - DOMAIN-SUFFIX,empornium.me
+  - DOMAIN-SUFFIX,falconalliance.cn
+  - DOMAIN-SUFFIX,fontong.com
   - DOMAIN-SUFFIX,gazellegames.net
+  - DOMAIN-SUFFIX,geilijiasu.com
+  - DOMAIN-SUFFIX,geilijiasu.net
+  - DOMAIN-SUFFIX,gigaget.com
   - DOMAIN-SUFFIX,hdchina.org
   - DOMAIN-SUFFIX,hdsky.me
   - DOMAIN-SUFFIX,icetorrent.org
   - DOMAIN-SUFFIX,jpopsuki.eu
+  - DOMAIN-SUFFIX,kanimg.com
+  - DOMAIN-SUFFIX,kankan.com
   - DOMAIN-SUFFIX,keepfrds.com
-  - DOMAIN-SUFFIX,madsrevolution.net
+  - DOMAIN-SUFFIX,kuaipan.cn
   - DOMAIN-SUFFIX,m-team.cc
+  - DOMAIN-SUFFIX,madsrevolution.net
+  - DOMAIN-SUFFIX,n0808.com
   - DOMAIN-SUFFIX,nanyangpt.com
   - DOMAIN-SUFFIX,ncore.cc
+  - DOMAIN-SUFFIX,neoimaging.cn
+  - DOMAIN-SUFFIX,newvr.com
   - DOMAIN-SUFFIX,open.cd
   - DOMAIN-SUFFIX,ourbits.club
+  - DOMAIN-SUFFIX,p2cdn.com
   - DOMAIN-SUFFIX,passthepopcorn.me
   - DOMAIN-SUFFIX,privatehd.to
+  - DOMAIN-SUFFIX,qbittorrent.org
   - DOMAIN-SUFFIX,redacted.ch
+  - DOMAIN-SUFFIX,sandai.net
+  - DOMAIN-SUFFIX,sjzhushou.com
   - DOMAIN-SUFFIX,springsunday.net
+  - DOMAIN-SUFFIX,szxlxzb.com
+  - DOMAIN-SUFFIX,thundercdn.com
+  - DOMAIN-SUFFIX,thunderurl.com
   - DOMAIN-SUFFIX,tjupt.org
   - DOMAIN-SUFFIX,totheglory.im
+  - DOMAIN-SUFFIX,xbase.cloud
+  - DOMAIN-SUFFIX,xbase.xyz
+  - DOMAIN-SUFFIX,xcloudbase.com
+  - DOMAIN-SUFFIX,xlisp.net
+  - DOMAIN-SUFFIX,xlpan.com
+  - DOMAIN-SUFFIX,xlyouxi.net
+  - DOMAIN-SUFFIX,xunlei.cn
+  - DOMAIN-SUFFIX,xunlei.com
+  - DOMAIN-SUFFIX,xunlei.net
+  - PROCESS-NAME,aria2c
+  - PROCESS-NAME,aria2c.exe
+  - PROCESS-NAME,baidunetdisk.exe
+  - PROCESS-NAME,bitcomet
+  - PROCESS-NAME,bitcomet_x64.exe
+  - PROCESS-NAME,bitcomet.exe
+  - PROCESS-NAME,BitComet.exe
+  - PROCESS-NAME,downloadservice
+  - PROCESS-NAME,downloadservice.exe
+  - PROCESS-NAME,fdm
+  - PROCESS-NAME,fdm.exe
+  - PROCESS-NAME,folx
+  - PROCESS-NAME,Folx
+  - PROCESS-NAME,folx.exe
+  - PROCESS-NAME,nettransport
+  - PROCESS-NAME,NetTransport
+  - PROCESS-NAME,nettransport.exe
+  - PROCESS-NAME,NetTransport.exe
+  - PROCESS-NAME,qbittorrent
+  - PROCESS-NAME,qbittorrent.exe
+  - PROCESS-NAME,thunder
+  - PROCESS-NAME,Thunder
+  - PROCESS-NAME,thunder.exe
+  - PROCESS-NAME,Thunder.exe
+  - PROCESS-NAME,transmission
+  - PROCESS-NAME,Transmission
+  - PROCESS-NAME,transmission-daemon.exe
+  - PROCESS-NAME,transmission-qt.exe
+  - PROCESS-NAME,transmission.exe
+  - PROCESS-NAME,utorrent
+  - PROCESS-NAME,uTorrent
+  - PROCESS-NAME,utorrent.exe
+  - PROCESS-NAME,uTorrent.exe
+  - PROCESS-NAME,webtorrent
+  - PROCESS-NAME,WebTorrent
+  - PROCESS-NAME,WebTorrent Helper
+  - PROCESS-NAME,webtorrent.exe
+  - PROCESS-NAME,WebTorrent.exe
+  - PROCESS-NAME,webtorrenthelper
+  - PROCESS-NAME,webtorrenthelper.exe
+  - PROCESS-NAME,weiyun
+  - PROCESS-NAME,weiyun.exe
+  # - PROCESS-NAME,IDMan.exe
 
-  # Private Tracker
+  # PT
+  - DOMAIN-SUFFIX,52pt.site
+  - DOMAIN-SUFFIX,aidoru-online.me
+  - DOMAIN-SUFFIX,alpharatio.cc
   - DOMAIN-SUFFIX,animebytes.tv
   - DOMAIN-SUFFIX,animetorrents.me
+  - DOMAIN-SUFFIX,anthelion.me
+  - DOMAIN-SUFFIX,asiancinema.me
+  - DOMAIN-SUFFIX,avgv.cc
+  - DOMAIN-SUFFIX,avistaz.to
+  - DOMAIN-SUFFIX,awesome-hd.me
   - DOMAIN-SUFFIX,beitai.pt
+  - DOMAIN-SUFFIX,beyond-hd.me
+  - DOMAIN-SUFFIX,bibliotik.me
   - DOMAIN-SUFFIX,bittorrent.com
+  - DOMAIN-SUFFIX,blutopia.xyz
+  - DOMAIN-SUFFIX,broadcasthe.net
+  - DOMAIN-SUFFIX,bt.byr.cn
+  - DOMAIN-SUFFIX,bt.neu6.edu.cn
+  - DOMAIN-SUFFIX,btschool.club
+  - DOMAIN-SUFFIX,bwtorrents.tv
+  - DOMAIN-SUFFIX,ccfbits.org
+  - DOMAIN-SUFFIX,cgpeers.com
+  - DOMAIN-SUFFIX,chdbits.co
+  - DOMAIN-SUFFIX,cinemageddon.net
+  - DOMAIN-SUFFIX,cinematik.net
+  - DOMAIN-SUFFIX,cinemaz.to
+  - DOMAIN-SUFFIX,classix-unlimited.co.uk
+  - DOMAIN-SUFFIX,concertos.live
+  - DOMAIN-SUFFIX,dicmusic.club
+  - DOMAIN-SUFFIX,discfan.net
+  - DOMAIN-SUFFIX,dxdhd.com
+  - DOMAIN-SUFFIX,eastgame.org
+  - DOMAIN-SUFFIX,empornium.me
+  - DOMAIN-SUFFIX,et8.org
+  - DOMAIN-SUFFIX,exoticaz.to
+  - DOMAIN-SUFFIX,extremlymtorrents.ws
+  - DOMAIN-SUFFIX,filelist.io
+  - DOMAIN-SUFFIX,gazellegames.net
+  - DOMAIN-SUFFIX,gfxpeers.net
+  - DOMAIN-SUFFIX,hd-space.org
+  - DOMAIN-SUFFIX,hd-torrents.org
+  - DOMAIN-SUFFIX,hd4.xyz
   - DOMAIN-SUFFIX,hd4fans.org
+  - DOMAIN-SUFFIX,hdarea.co
+  - DOMAIN-SUFFIX,hdatmos.club
+  - DOMAIN-SUFFIX,hdbd.us
+  - DOMAIN-SUFFIX,hdbits.org
+  - DOMAIN-SUFFIX,hdchina.org
+  - DOMAIN-SUFFIX,hdcity.city
+  - DOMAIN-SUFFIX,hddolby.com
+  - DOMAIN-SUFFIX,hdfans.org
   - DOMAIN-SUFFIX,hdhome.org
+  - DOMAIN-SUFFIX,hdpost.top
+  - DOMAIN-SUFFIX,hdroute.org
+  - DOMAIN-SUFFIX,hdsky.me
+  - DOMAIN-SUFFIX,hdstreet.club
   - DOMAIN-SUFFIX,hdtime.org
+  - DOMAIN-SUFFIX,hdupt.com
   - DOMAIN-SUFFIX,hdzone.me
+  - DOMAIN-SUFFIX,hitpt.com
+  - DOMAIN-SUFFIX,hitpt.org
+  - DOMAIN-SUFFIX,hudbt.hust.edu.cn
+  - DOMAIN-SUFFIX,icetorrent.org
+  - DOMAIN-SUFFIX,iptorrents.com
+  - DOMAIN-SUFFIX,j99.info
+  - DOMAIN-SUFFIX,joyhd.net
+  - DOMAIN-SUFFIX,jpopsuki.eu
+  - DOMAIN-SUFFIX,karagarga.in
+  - DOMAIN-SUFFIX,keepfrds.com
   - DOMAIN-SUFFIX,leaguehd.com
+  - DOMAIN-SUFFIX,lztr.me
+  - DOMAIN-SUFFIX,m-team.cc
+  - DOMAIN-SUFFIX,madsrevolution.net
+  - DOMAIN-SUFFIX,moecat.best
+  - DOMAIN-SUFFIX,morethan.tv
   - DOMAIN-SUFFIX,msg.vg
+  - DOMAIN-SUFFIX,myanonamouse.net
+  - DOMAIN-SUFFIX,nanyangpt.com
+  - DOMAIN-SUFFIX,ncore.cc
+  - DOMAIN-SUFFIX,nebulance.io
+  - DOMAIN-SUFFIX,nicept.net
+  - DOMAIN-SUFFIX,npupt.com
+  - DOMAIN-SUFFIX,nwsuaf6.edu.cn
+  - DOMAIN-SUFFIX,open.cd
+  - DOMAIN-SUFFIX,oppaiti.me
+  - DOMAIN-SUFFIX,orpheus.network
+  - DOMAIN-SUFFIX,ourbits.club
+  - DOMAIN-SUFFIX,passthepopcorn.me
+  - DOMAIN-SUFFIX,pornbits.net
+  - DOMAIN-SUFFIX,privatehd.to
+  - DOMAIN-SUFFIX,pterclub.com
   - DOMAIN-SUFFIX,pthome.net
+  - DOMAIN-SUFFIX,ptsbao.club
+  - DOMAIN-SUFFIX,pussytorrents.org
+  - DOMAIN-SUFFIX,redacted.ch
+  - DOMAIN-SUFFIX,sdbits.org
+  - DOMAIN-SUFFIX,sjtu.edu.cn
+  - DOMAIN-SUFFIX,skyey2.com
+  - DOMAIN-SUFFIX,soulvoice.club
+  - DOMAIN-SUFFIX,springsunday.net
+  - DOMAIN-SUFFIX,tjupt.org
+  - DOMAIN-SUFFIX,torrentday.com
+  - DOMAIN-SUFFIX,torrentleech.org
+  - DOMAIN-SUFFIX,torrentseeds.org
+  - DOMAIN-SUFFIX,totheglory.im
   - DOMAIN-SUFFIX,trontv.com
+  - DOMAIN-SUFFIX,u2.dmhy.org
+  - DOMAIN-SUFFIX,uhdbits.org
+  - DOMAIN-SUFFIX,xauat6.edu.cn
   - DOMAIN-KEYWORD,announce
   - DOMAIN-KEYWORD,torrent
   - DOMAIN-KEYWORD,tracker
-  - DOMAIN-SUFFIX,smtp
-  # - URL-REGEX,(Subject|HELO|SMTP)
+
+  # NTP 时区
+  - DOMAIN-SUFFIX,cn.ntp.org.cn
+  - DOMAIN-SUFFIX,de.ntp.org.cn
+  - DOMAIN-SUFFIX,edu.ntp.org.cn
+  - DOMAIN-SUFFIX,hk.ntp.org.cn
+  - DOMAIN-SUFFIX,ina.ntp.org.cn
+  - DOMAIN-SUFFIX,jp.ntp.org.cn
+  - DOMAIN-SUFFIX,kr.ntp.org.cn
+  - DOMAIN-SUFFIX,ntp.aliyun.com
+  - DOMAIN-SUFFIX,ntp.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp.sjtu.edu.cn
+  - DOMAIN-SUFFIX,ntp1.aliyun.com
+  - DOMAIN-SUFFIX,ntp1.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp10.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp11.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp12.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp2.aliyun.com
+  - DOMAIN-SUFFIX,ntp2.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp3.aliyun.com
+  - DOMAIN-SUFFIX,ntp3.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp4.aliyun.com
+  - DOMAIN-SUFFIX,ntp4.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp5.aliyun.com
+  - DOMAIN-SUFFIX,ntp5.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp6.aliyun.com
+  - DOMAIN-SUFFIX,ntp6.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp7.aliyun.com
+  - DOMAIN-SUFFIX,ntp7.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp8.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,ntp9.cloud.aliyuncs.com
+  - DOMAIN-SUFFIX,pool.ntp.org
+  - DOMAIN-SUFFIX,s1a.time.edu.cn
+  - DOMAIN-SUFFIX,s1b.time.edu.cn
+  - DOMAIN-SUFFIX,s1c.time.edu.cn
+  - DOMAIN-SUFFIX,s1d.time.edu.cn
+  - DOMAIN-SUFFIX,s1e.time.edu.cn
+  - DOMAIN-SUFFIX,s2a.time.edu.cn
+  - DOMAIN-SUFFIX,s2b.time.edu.cn
+  - DOMAIN-SUFFIX,s2c.time.edu.cn
+  - DOMAIN-SUFFIX,s2d.time.edu.cn
+  - DOMAIN-SUFFIX,s2e.time.edu.cn
+  - DOMAIN-SUFFIX,s2f.time.edu.cn
+  - DOMAIN-SUFFIX,s2g.time.edu.cn
+  - DOMAIN-SUFFIX,s2h.time.edu.cn
+  - DOMAIN-SUFFIX,s2k.time.edu.cn
+  - DOMAIN-SUFFIX,s2m.time.edu.cn
+  - DOMAIN-SUFFIX,sgp.ntp.org.cn
+  - DOMAIN-SUFFIX,time.apple.com
+  - DOMAIN-SUFFIX,time.asia.apple.com
+  - DOMAIN-SUFFIX,time.nist.gov
+  - DOMAIN-SUFFIX,time.pool.aliyun.com
+  - DOMAIN-SUFFIX,time.windows.com
+  - DOMAIN-SUFFIX,time1.aliyun.com
+  - DOMAIN-SUFFIX,time1.apple.com
+  - DOMAIN-SUFFIX,time1.cloud.tencent.com
+  - DOMAIN-SUFFIX,time1.google.com
+  - DOMAIN-SUFFIX,time1.tencentyun.com
+  - DOMAIN-SUFFIX,time2.aliyun.com
+  - DOMAIN-SUFFIX,time2.apple.com
+  - DOMAIN-SUFFIX,time2.cloud.tencent.com
+  - DOMAIN-SUFFIX,time2.google.com
+  - DOMAIN-SUFFIX,time2.tencentyun.com
+  - DOMAIN-SUFFIX,time3.aliyun.com
+  - DOMAIN-SUFFIX,time3.apple.com
+  - DOMAIN-SUFFIX,time3.cloud.tencent.com
+  - DOMAIN-SUFFIX,time3.google.com
+  - DOMAIN-SUFFIX,time3.tencentyun.com
+  - DOMAIN-SUFFIX,time4.aliyun.com
+  - DOMAIN-SUFFIX,time4.apple.com
+  - DOMAIN-SUFFIX,time4.cloud.tencent.com
+  - DOMAIN-SUFFIX,time4.google.com
+  - DOMAIN-SUFFIX,time4.tencentyun.com
+  - DOMAIN-SUFFIX,time5.aliyun.com
+  - DOMAIN-SUFFIX,time5.apple.com
+  - DOMAIN-SUFFIX,time5.cloud.tencent.com
+  - DOMAIN-SUFFIX,time5.tencentyun.com
+  - DOMAIN-SUFFIX,time6.aliyun.com
+  - DOMAIN-SUFFIX,time6.apple.com
+  - DOMAIN-SUFFIX,time7.aliyun.com
+  - DOMAIN-SUFFIX,time7.apple.com
+  - DOMAIN-SUFFIX,tw.ntp.org.cn
+  - DOMAIN-SUFFIX,us.ntp.org.cn
 
   # 国内DNS
   # 114DNS
